--- a/css/index.css
+++ b/css/index.css
@@ -214,7 +214,7 @@ h2 {
   display: grid;
   grid-template-rows: repeat(10, 1fr);
   grid-template-columns: repeat(5, 1fr);
-  border: 1.5px dashed black;
+  border-right: 1.5px dashed black;
 }
 .mainContent .introText {
   grid-row-start: 1;
@@ -264,4 +264,30 @@ h2 {
 .mainContent .introPara2 p {
   font-size: 1.6rem;
   padding-right: 16px;
+}
+.mainContent .centerImg {
+  grid-row-start: 5;
+  grid-row-end: 8;
+  grid-column-start: 1;
+  grid-column-end: 4;
+  border: 0.5px dashed gray;
+}
+.mainContent .centerImg img {
+  padding: 20px 15px 0 15px;
+  width: 100%;
+  max-height: 100%;
+  opacity: 0.5;
+}
+.mainContent .centerText {
+  grid-row-start: 5;
+  grid-row-end: 8;
+  grid-column-start: 4;
+  grid-column-end: 6;
+}
+.mainContent .centerText p {
+  font-size: 1.6rem;
+  padding: 0 16px;
+}
+.mainContent .centerText p a {
+  color: #5900ff;
 }
