Home Page styled for desktop

--- a/less/global.less
+++ b/less/global.less
@@ -5,7 +5,7 @@
 html, body {
     // display: flex;  
     width: 100%;
-    padding: 0 2% 0 2%;
+    // padding: 0 5% 0 5%;
     background: #dec0f1;
     font-family: 'Montserrat';
     font-size: 62.5%;
@@ -17,7 +17,7 @@ h1 {
     color: #5900ff;
     font-size: 4rem;
     font-weight: 500;
-    font-style: italic;
+    font-style: italic
 }
 
 h2 {
@@ -26,5 +26,14 @@ h2 {
     margin: 20px 0;
     font-size: 3rem;
     font-weight: 500;
-    font-style: italic;
+    font-style: italic
+}
+
+h3 {
+    font-family: 'Permanent Marker';
+    color: #5900ff;
+    margin: 5px 0;
+    font-size: 1.8rem;
+    font-weight: 500;
+    font-style: italic
 }
