--- a/css/index.css
+++ b/css/index.css
@@ -132,7 +132,6 @@ table {
 html,
 body {
   width: 100%;
-  padding: 0 2% 0 2%;
   background: #dec0f1;
   font-family: 'Montserrat';
   font-size: 62.5%;
@@ -153,6 +152,14 @@ h2 {
   font-weight: 500;
   font-style: italic;
 }
+h3 {
+  font-family: 'Permanent Marker';
+  color: #5900ff;
+  margin: 5px 0;
+  font-size: 1.8rem;
+  font-weight: 500;
+  font-style: italic;
+}
 .button-style {
   padding: 10px 25px;
   margin-bottom: 30px;
@@ -162,6 +169,7 @@ h2 {
 .header {
   width: 150px;
   height: 100vh;
+  margin-left: 5%;
   background: #7161ef;
   position: fixed;
 }
@@ -209,7 +217,8 @@ h2 {
   background: #a0979700;
 }
 .mainContent {
-  width: calc(100% - 150px);
+  width: calc(90% - 150px);
+  margin-right: 5%;
   float: right;
   display: grid;
   grid-template-rows: repeat(10, 1fr);
@@ -222,7 +231,6 @@ h2 {
   grid-column-start: 1;
   grid-column-end: 6;
   text-align: center;
-  border: 0.5px dashed gray;
 }
 .mainContent .introText span {
   font-family: 'Montserrat';
@@ -232,7 +240,6 @@ h2 {
   color: #957fef;
 }
 .mainContent .introPara1 {
-  border: 0.5px dashed gray;
   grid-row-start: 2;
   grid-row-end: 5;
   grid-column-start: 1;
@@ -247,13 +254,19 @@ h2 {
   grid-row-end: 5;
   grid-column-start: 2;
   grid-column-end: 5;
-  border: 0.5px dashed gray;
 }
 .mainContent .introImg img {
-  padding: 0 1%;
-  width: 100%;
+  padding: 10% 1% 0 1%;
+  max-width: 80%;
   max-height: 100%;
   opacity: 0.4;
+}
+.mainContent .introImg .imgContainer {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: flex-start;
 }
 .mainContent .introPara2 {
   grid-row-start: 2;
@@ -270,7 +283,6 @@ h2 {
   grid-row-end: 8;
   grid-column-start: 1;
   grid-column-end: 4;
-  border: 0.5px dashed gray;
 }
 .mainContent .centerImg img {
   padding: 20px 15px 0 15px;
@@ -290,4 +302,37 @@ h2 {
 }
 .mainContent .centerText p a {
   color: #5900ff;
+}
+.mainContent .contactDets {
+  grid-row-start: 8;
+  grid-row-end: 10;
+  grid-column-start: 1;
+  grid-column-end: 3;
+  padding-left: 15px;
+  border-top: 0.5px dashed gray;
+  border-right: 0.5px dashed gray;
+  border-bottom: 0.5px dashed gray;
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
+}
+.mainContent .contactDets p {
+  font-size: 1.6rem;
+  padding: 0 16px;
+}
+.footer {
+  grid-row-start: 10;
+  grid-row-end: 11;
+  grid-column-start: 1;
+  grid-column-end: 6;
+}
+.footer p {
+  padding-top: 45px;
+  font-size: 1.2rem;
+}
+.footer .footerContentBox {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
 }
