--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,5 +1,6 @@
 .mainContent{
-    width: calc(100% - 150px);
+    width: calc(90% - 150px);
+    margin-right: 5%;
     float: right;
     .gridStart(repeat(10, 1fr), repeat(5, 1fr));
     border-right: 1.5px dashed black;
@@ -7,7 +8,6 @@
     .introText {
         .gridAlign(1, 2, 1, 6);
         text-align: center;
-        border: .5px dashed gray;
         span {
             font-family: 'Montserrat';
             font-weight: normal;
@@ -22,19 +22,20 @@
             font-size: 1.6rem;
             padding-left: 16px;
         }
-
-        border: .5px dashed gray;
         .gridAlign(2, 5, 1, 2)
     }
 
     .introImg {
         .gridAlign(2, 5, 2, 5);
-        border: .5px dashed gray;
+
         img {
-            padding: 0 1%;
-            width: 100%;
+            padding: 10% 1% 0 1%;
+            max-width: 80%;
             max-height: 100%;
             opacity: .4;
+        }
+        .imgContainer {
+            .displayF(row, wrap, center, flex-start);
         }
     }
 
@@ -49,7 +50,6 @@
 
     .centerImg {
         .gridAlign(5, 8, 1, 4);
-        border: .5px dashed gray;
         img {
             padding: 20px 15px 0 15px;
             width: 100%;
@@ -66,6 +66,20 @@
             a {
                 color: #5900ff;
             }
+        }
+    }
+
+    .contactDets {
+        .gridAlign(8, 10, 1, 3);
+        padding-left: 15px;
+        border-top: .5px dashed gray;
+        border-right: .5px dashed gray;
+        border-bottom: .5px dashed gray;
+        border-top-right-radius: 15px;
+        border-bottom-right-radius: 15px;
+        p {
+            font-size: 1.6rem;
+            padding: 0 16px;
         }
     }
 }
