--- a/less/variables.less
+++ b/less/variables.less
@@ -1,2 +1,2 @@
-@tablet: ~"(max-width: 800px)";
-@mobile: ~"(max-width: 400px)";
+@tablet: ~"(max-width: 1000px)";
+// @mobile: ~"(max-width: 400px)";
