mobile breaks complete for tableton home page

--- a/less/mixins.less
+++ b/less/mixins.less
@@ -3,6 +3,9 @@
     margin-bottom: 30px;
     border-radius: 10px;
     background: #a0979726;
+    @media @tablet {
+        margin: 0;
+    }
 }
 
 .displayF(@direction, @wrap, @justify, @align) {
