--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,9 +1,17 @@
 .mainContent{
     width: calc(90% - 150px);
+    height: 100%;
     margin-right: 5%;
     float: right;
-    .gridStart(repeat(9, 150px), repeat(5, 1fr));
+    .gridStart(repeat(8, 150px) 75px, repeat(5, 1fr));
     border-right: .5px dashed #5900FF;
+    @media @tablet {
+        // position: absolute;
+        .gridStart(repeat(6, 150px) 20px 300px 75px, repeat(5, 1fr));
+        width: 100%;
+        margin: 0;
+        border: none;
+    }
     
     .introText {
         .gridAlign(1, 2, 1, 6);
@@ -13,7 +21,7 @@
         .introTextContainer {
             width: 100%;
             height: 100%;
-            .displayF(column, wrap, space-between, center);
+            .displayF(column, no-wrap, space-between, center);
         }
         p {
             font-family: 'Montserrat';
@@ -24,22 +32,22 @@
         }
     }
 
-    .introPara1 {
-        p {
-            font-size: 1.6rem;
-            padding-left: 16px;
-        }
-        .gridAlign(2, 5, 1, 2)
-    }
-
     .introImg {
-        .gridAlign(3, 5, 2, 5);
+        .gridAlign(2, 5, 2, 5);
+        @media @tablet {
+            .gridAlign(2, 5, 1, 6);
+        }
 
         img {
             // padding: 10% 1% 0 1%;
             max-width: 90%;
             max-height: 100%;
             opacity: .4;
+            @media @tablet {
+                min-height: 100%;
+                width: 100%;
+                opacity: .2;
+            }
         }
         .imgContainer {
             width: 100%;
@@ -47,31 +55,88 @@
             .displayF(row, wrap, center, flex-end);
         }
     }
-
+    
+    .introPara1 {
+        p {
+            font-size: 1.6rem;
+            padding-left: 16px;
+        }
+        @media @tablet {
+            // color: #5900ff;
+            font-weight: 500;
+        }
+        .gridAlign(2, 5, 1, 2);
+        @media @tablet {
+            border: .5px dashed gray;
+            h2 {
+                margin: 5px 0;
+                font-size: 2rem
+            }
+            p {
+                padding: 0 16px 0 0;
+            }
+            position: relative;
+            z-index: 2;
+            padding-left: 5%;
+            .gridAlign(2, 3, 1, 6);
+        }
+    }
+    
     .introPara2 {
         p {
             font-size: 1.6rem;
             padding-right: 16px;
         }
+        @media @tablet {
+            // color: #5900ff;
+            font-weight: 500;
+        }
 
         .gridAlign(2, 5, 5, 6);
+        @media @tablet {
+            .gridAlign(4, 5, 1, 6);
+            h2 {
+                margin: 5px 0;
+                font-size: 2rem
+            }
+            position: relative;
+            z-index: 2;
+            padding-left: 5%;
+        }
     }
+    
 
     .centerImg {
         .gridAlign(5, 7, 1, 4);
+        @media @tablet {
+            .gridAlign(5, 8, 1, 6);            
+        }
         img {
             padding: 20px 20px 0 15%;
             width: 100%;
             max-height: 100%;
             opacity: .5;
+            @media @tablet{
+                padding: 0 5%;
+                min-width: 100%;
+            }
         }
     }
 
     .centerText {
         .gridAlign(5, 8, 4, 6);
+        @media @tablet {
+            position: relative;
+            z-index: 2;
+            padding: 0 10%;
+            .gridAlign(5, 7, 1, 6);
+        }
         p {
             font-size: 1.6rem;
             padding: 0 16px;
+            @media @tablet {
+                font-weight: 500;
+            }
             a {
                 color: #5900ff;
             }
@@ -87,6 +152,12 @@
         border-bottom: .5px dashed gray;
         border-top-right-radius: 15px;
         border-bottom-right-radius: 15px;
+        @media @tablet {
+            .gridAlign(8, 9, 1, 4);
+            h2 {
+                margin: 5px 0 0 0;
+            }
+        }
         p {
             font-size: 1.6rem;
             padding: 0 16px;
@@ -95,6 +166,9 @@
 
     .phoneImg {
         .gridAlign(7, 8, 1, 3);
+        @media @tablet {
+            .gridAlign(8, 9, 1, 3)
+        }
         img {            
             opacity: .2;
             width: 70%;
