--- a/less/navigation.less
+++ b/less/navigation.less
@@ -4,9 +4,19 @@
     margin-left: 5%;
     background: #7161ef;
     position: fixed;
+    @media @tablet {
+        position: static; 
+        width: 100%;
+        margin: 0;
+        height: 65px;
+    }
     
     nav {
         .displayF(column, wrap, space-around, center);
+        @media @tablet {
+            height: 100%;
+            .displayF(row, wrap, space-evenly, flex-end);
+        }
               
         .nav1 {            
             position: absolute;
@@ -14,6 +24,9 @@
             top: 0;
             opacity: .2;
             height: 33vh;
+            @media @tablet{
+                display: none;
+            }   
         }
         .nav2 {
             position: absolute;
@@ -21,6 +34,9 @@
             width: 100%;
             height: 33vh;
             opacity: .2;
+            @media @tablet{
+                display: none;
+            }        
         }
         .nav3 {
             position: absolute;
@@ -28,6 +44,9 @@
             width: 100%;
             height: 34vh;
             opacity: .2;
+            @media @tablet{
+                display: none;
+            }   
         }
         .sideNav {
             position: relative;
@@ -37,6 +56,9 @@
             font-size: 1.6rem;
             text-decoration: none;    
             .button-style();
+            @media @tablet {
+                margin: 0;
+            }
         }
     }
 }
