--- a/css/index.css
+++ b/css/index.css
@@ -231,7 +231,7 @@ h3 {
   position: absolute;
   top: 66vh;
   width: 100%;
-  height: 34vh;
+  height: 33vh;
   opacity: 0.2;
 }
 @media (max-width: 1000px) {
@@ -330,6 +330,7 @@ h3 {
 }
 @media (max-width: 1000px) {
   .mainContent .introImg img {
+    padding-top: 100px;
     min-height: 100%;
     width: 100%;
     opacity: 0.2;
@@ -356,6 +357,7 @@ h3 {
 }
 @media (max-width: 1000px) {
   .mainContent .introPara1 {
+    padding-top: 30px;
     font-weight: 500;
   }
 }
