--- a/less/home-page.less
+++ b/less/home-page.less
@@ -44,6 +44,7 @@
             max-height: 100%;
             opacity: .4;
             @media @tablet {
+                padding-top: 100px;
                 min-height: 100%;
                 width: 100%;
                 opacity: .2;
@@ -63,6 +64,7 @@
         }
         @media @tablet {
             // color: #5900ff;
+            padding-top: 30px;
             font-weight: 500;
         }
         .gridAlign(2, 5, 1, 2);
