--- a/less/navigation.less
+++ b/less/navigation.less
@@ -63,6 +63,24 @@
     }
 }
 
+.header2 {
+    height: 60px;
+    background: #7161ef;
+    .displayF(row, wrap, space-evenly, flex-end);
+    .sideNav {
+        color: #efd9ce;
+        font-family: 'Montserrat';
+        font-size: 1.6rem;
+        text-decoration: none;    
+        .button-style();
+        margin: 0;
+    }
+}
+
 .header nav .sideNav:hover{
+    background: #a0979700;
+}
+
+.header2 nav .sideNav:hover{
     background: #a0979700;
 }
