--- a/css/index.css
+++ b/css/index.css
@@ -538,6 +538,11 @@ h3 {
   opacity: 0.2;
   width: 70%;
 }
+.mainContent .top2Staff {
+  width: 100%;
+  height: 200px;
+  border: 1px solid black;
+}
 .footer {
   grid-row-start: 9;
   grid-row-end: 10;
