--- a/less/home-page.less
+++ b/less/home-page.less
@@ -175,4 +175,10 @@
             width: 70%;
         }
     }
+
+    .top2Staff {
+        width: 100%;
+        height: 200px;
+        border: 1px solid black;
+    }
 }
