--- a/css/index.css
+++ b/css/index.css
@@ -538,10 +538,34 @@ h3 {
   opacity: 0.2;
   width: 70%;
 }
-.mainContent .top2Staff {
-  width: 100%;
-  height: 200px;
+.top2Staff {
+  margin: 50px 0 0 10%;
+  width: 90%;
   border: 1px solid black;
+}
+.top2Staff .jasmine {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  align-items: center;
+}
+.top2Staff .jasmine .imgContainer {
+  height: 200px;
+  width: 200px;
+  border-radius: 100px;
+}
+.top2Staff .jasmine .imgContainer img {
+  max-width: 100%;
+  max-height: 100%;
+  border-radius: 100px;
+}
+.top2Staff .jasmine .PLtext {
+  width: calc(100% - 200px);
+  padding: 0 45px;
+}
+.top2Staff .jasmine p {
+  font-size: 1.6rem;
 }
 .footer {
   grid-row-start: 9;
