--- a/less/about-page.less
+++ b/less/about-page.less
@@ -22,4 +22,77 @@
             font-size: 1.6rem;
         }
     }
+    .corey {
+        margin-top: 50px;
+        .displayF(row, wrap, flex-start, center);
+        .imgContainer2 {
+            height: 200px;
+            width: 200px;
+            border-radius: 100px;
+            img {
+                max-width: 100%;
+                max-height: 100%;
+                border-radius: 100px;
+            }
+        }
+        .BEtext {
+            width: calc(100% - 200px);
+            padding: 0 45px;
+        }
+        p {
+            font-size: 1.6rem;
+        }
+    }
+}
+
+.frontEndStaff {
+    width: 100%;
+    border: 1px solid black;
+    margin-top: 50px;
+    .displayF(row, wrap, flex-start, center);
+    .amy {
+        width: 45%;
+        margin-left: 5%;
+        .displayF(row, wrap, flex-start, flex-start);
+        .FE_text {
+            width: calc(100% - 200px);
+            padding-left: 15px;
+        }
+        p {
+            font-size: 1.6rem;
+        }
+        .FEimg {
+            height: 200px;
+            width: 200px;
+            border-radius: 100px;
+            img {
+                max-width: 100%;
+                max-height: 100%;
+                border-radius: 100px;
+            }
+        }
+    }
+
+    .shya {
+        width: 45%;
+        margin-right: 5%;
+        .displayF(row, wrap, flex-start, flex-start);
+        .FE_1_text {
+            width: calc(100% - 200px);
+            padding-left: 15px;
+        }
+        p {
+            font-size: 1.6rem;
+        }
+        .FEimg1 {
+            height: 200px;
+            width: 200px;
+            border-radius: 100px;
+            img {
+                max-width: 100%;
+                max-height: 100%;
+                border-radius: 100px;
+            }
+        }
+    }
 }
