about page complete with mobile styling

--- a/less/footer.less
+++ b/less/footer.less
@@ -9,3 +9,10 @@
         .displayF(column, wrap, space-between, center)
     }
 }
+
+.aboutFooter {
+    height: 60px;
+    background: #7161ef;
+    margin-top: 50px;
+    .displayF(row, wrap, center, flex-end);
+}
