--- a/less/global.less
+++ b/less/global.less
@@ -3,13 +3,16 @@
 }
 
 html, body {
-    // display: flex;  
-    width: 100%;
+    // .displayF(row, wrap, space-between, stretch);
+    // width: 100%;
     // padding: 0 5% 0 5%;
     background: #dec0f1;
     font-family: 'Montserrat';
     font-size: 62.5%;
     line-height: 1.25;
+    @media @mobile {
+        min-width: 100%;
+    }
 }
 
 h1 {
