--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,14 +1,14 @@
 .mainContent{
     width: calc(90% - 150px);
-    height: 100%;
+    // height: 100%;
     margin-right: 5%;
     float: right;
     .gridStart(repeat(8, 150px) 75px, repeat(5, 1fr));
-    border-right: .5px dashed #5900FF;
+    border-right: .5px dashed red;
     @media @tablet {
         // position: absolute;
         .gridStart(repeat(6, 150px) 20px 300px 75px, repeat(5, 1fr));
-        width: 100%;
+        width: 100vw;
         margin: 0;
         border: none;
     }
@@ -16,12 +16,20 @@
     .introText {
         .gridAlign(1, 2, 1, 6);
         h1 {
-            padding-top: 60px;
+            // padding-top: 60px;
+            @media @tablet {
+                padding: 0;
+            }
         }
-        .introTextContainer {
+        .textContain {  
             width: 100%;
-            height: 100%;
-            .displayF(column, no-wrap, space-between, center);
+            height: 100%;          
+            .displayF(column, wrap, space-between, center);
+        }
+        // .introTextContainer {
+        //     width: 100%;
+        //     height: 100%;
+        //     .displayF(column, no-wrap, space-between, center);
         }
         p {
             font-family: 'Montserrat';
@@ -110,7 +118,7 @@
     .centerImg {
         .gridAlign(5, 7, 1, 4);
         @media @tablet {
-            .gridAlign(5, 8, 1, 6);            
+            .gridAlign(5, 8, 1, 6);          
         }
         img {
             padding: 20px 20px 0 15%;
@@ -154,7 +162,7 @@
         border-top-right-radius: 15px;
         border-bottom-right-radius: 15px;
         @media @tablet {
-            .gridAlign(8, 9, 1, 4);
+            .gridAlign(7, 9, 1, 5);
             h2 {
                 margin: 5px 0 0 0;
             }
@@ -175,4 +183,3 @@
             width: 70%;
         }
     }
-}
