--- a/less/home-page.less
+++ b/less/home-page.less
@@ -4,7 +4,7 @@
     margin-right: 5%;
     float: right;
     .gridStart(repeat(8, 150px) 75px, repeat(5, 1fr));
-    border-right: .5px dashed red;
+    border-right: .5px dashed #7161ef;
     @media @tablet {
         // position: absolute;
         .gridStart(repeat(6, 150px) 20px 300px 75px, repeat(5, 1fr));
