--- a/less/home-page.less
+++ b/less/home-page.less
@@ -31,7 +31,7 @@
         //     height: 100%;
         //     .displayF(column, no-wrap, space-between, center);
         }
-        p {
+        .intro {
             font-family: 'Montserrat';
             font-weight: normal;
             font-style: normal;
@@ -69,6 +69,7 @@
         p {
             font-size: 1.6rem;
             padding-left: 16px;
+            // color: black;
         }
         @media @tablet {
             // color: #5900ff;
