adjustments to html text

--- a/less/about-page.less
+++ b/less/about-page.less
@@ -87,7 +87,7 @@
     width: 100%;
     margin-top: 50px;
     .displayF(row, wrap, flex-start, center);
-    .amy {
+    .ashley {
         width: 45%;
         margin-left: 5%;
         .displayF(row, wrap, flex-start, flex-start);
