--- a/css/index.css
+++ b/css/index.css
@@ -654,7 +654,7 @@ h3 {
   justify-content: flex-start;
   align-items: center;
 }
-.frontEndStaff .amy {
+.frontEndStaff .ashley {
   width: 45%;
   margin-left: 5%;
   display: flex;
@@ -664,7 +664,7 @@ h3 {
   align-items: flex-start;
 }
 @media (max-width: 1000px) {
-  .frontEndStaff .amy {
+  .frontEndStaff .ashley {
     width: 100%;
     margin: 0;
     padding-top: 30px;
@@ -676,34 +676,34 @@ h3 {
     align-items: center;
   }
 }
-.frontEndStaff .amy .FE_text {
+.frontEndStaff .ashley .FE_text {
   width: calc(100% - 200px);
   padding-left: 15px;
 }
 @media (max-width: 1000px) {
-  .frontEndStaff .amy .FE_text {
+  .frontEndStaff .ashley .FE_text {
     width: calc(100% - 220px);
   }
 }
-.frontEndStaff .amy p {
+.frontEndStaff .ashley p {
   font-size: 1.6rem;
 }
-.frontEndStaff .amy h1 span {
+.frontEndStaff .ashley h1 span {
   font-family: "Montserrat";
   color: #957fef;
   font-size: 2.5rem;
 }
-.frontEndStaff .amy .FEimg {
+.frontEndStaff .ashley .FEimg {
   height: 200px;
   width: 200px;
   border-radius: 100px;
 }
 @media (max-width: 1000px) {
-  .frontEndStaff .amy .FEimg {
+  .frontEndStaff .ashley .FEimg {
     margin-left: 20px;
   }
 }
-.frontEndStaff .amy .FEimg img {
+.frontEndStaff .ashley .FEimg img {
   max-width: 100%;
   max-height: 100%;
   border-radius: 100px;
