multiple adjustments made to responsiveness of nav headers and various images in both index.html and aboutpage.html

--- a/less/mixins.less
+++ b/less/mixins.less
@@ -3,8 +3,12 @@
     margin-bottom: 30px;
     border-radius: 10px;
     background: #a0979726;
-    @media @tablet {
+    @media @tablet {        
         margin: 0;
+    }
+    @media @mobile {
+        margin: 0;
+        padding: 10px 40px;
     }
 }
 
