--- a/css/index.css
+++ b/css/index.css
@@ -176,6 +176,12 @@ h3 {
     margin: 0;
   }
 }
+@media (max-width: 410px) {
+  .button-style {
+    margin: 0;
+    padding: 10px 40px;
+  }
+}
 .header {
   width: 150px;
   height: 100vh;
@@ -189,6 +195,11 @@ h3 {
     width: 100%;
     margin: 0;
     height: 65px;
+  }
+}
+@media (max-width: 410px) {
+  .header {
+    height: 100px;
   }
 }
 .header nav {
@@ -261,6 +272,12 @@ h3 {
     margin: 0;
   }
 }
+@media (max-width: 410px) {
+  .header nav .sideNav {
+    margin: 0;
+    padding: 10px 40px;
+  }
+}
 @media (max-width: 1000px) {
   .header nav .sideNav {
     margin: 0;
@@ -274,6 +291,11 @@ h3 {
   flex-wrap: wrap;
   justify-content: space-evenly;
   align-items: flex-end;
+}
+@media (max-width: 410px) {
+  .header2 {
+    height: 100px;
+  }
 }
 .header2 .sideNav {
   color: #efd9ce;
@@ -289,6 +311,12 @@ h3 {
 @media (max-width: 1000px) {
   .header2 .sideNav {
     margin: 0;
+  }
+}
+@media (max-width: 410px) {
+  .header2 .sideNav {
+    margin: 0;
+    padding: 10px 40px;
   }
 }
 .header nav .sideNav:hover {
@@ -311,7 +339,7 @@ h3 {
     display: grid;
     grid-template-rows: repeat(6, 150px) 20px 300px 75px;
     grid-template-columns: repeat(5, 1fr);
-    width: 100vw;
+    width: 100%;
     margin: 0;
     border: none;
   }
@@ -335,6 +363,7 @@ h3 {
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
+  text-align: center;
 }
 .mainContent .intro {
   font-family: 'Montserrat';
@@ -364,7 +393,7 @@ h3 {
 }
 @media (max-width: 1000px) {
   .introImg img {
-    padding-top: 100px;
+    padding-top: 150px;
     min-height: 100%;
     width: 100%;
     opacity: 0.2;
@@ -452,7 +481,7 @@ h3 {
 @media (max-width: 1000px) {
   .centerImg {
     grid-row-start: 5;
-    grid-row-end: 8;
+    grid-row-end: 7;
     grid-column-start: 1;
     grid-column-end: 6;
   }
@@ -467,6 +496,7 @@ h3 {
   .centerImg img {
     padding: 0 5%;
     min-width: 100%;
+    opacity: 0.2;
   }
 }
 .centerText {
@@ -534,7 +564,7 @@ h3 {
 }
 @media (max-width: 1000px) {
   .phoneImg {
-    grid-row-start: 8;
+    grid-row-start: 7;
     grid-row-end: 9;
     grid-column-start: 1;
     grid-column-end: 3;
@@ -543,6 +573,12 @@ h3 {
 .phoneImg img {
   opacity: 0.2;
   width: 70%;
+}
+@media (max-width: 1000px) {
+  .phoneImg img {
+    width: 100%;
+    max-height: 100%;
+  }
 }
 .top2Staff {
   margin: 50px 10% 0 10%;
@@ -564,6 +600,11 @@ h3 {
 @media (max-width: 1000px) {
   .top2Staff .jasmine {
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
   }
 }
 .top2Staff .jasmine .imgContainer {
@@ -571,22 +612,10 @@ h3 {
   width: 200px;
   border-radius: 100px;
 }
-@media (max-width: 1000px) {
-  .top2Staff .jasmine .imgContainer {
-    margin-left: 20px;
-    width: 20%;
-    height: 100%;
-  }
-}
 .top2Staff .jasmine .imgContainer img {
   max-width: 100%;
   max-height: 100%;
   border-radius: 100px;
-}
-@media (max-width: 1000px) {
-  .top2Staff .jasmine .imgContainer img {
-    border-radius: 50%;
-  }
 }
 .top2Staff .jasmine .PLtext {
   width: calc(100% - 200px);
@@ -594,14 +623,9 @@ h3 {
 }
 @media (max-width: 1000px) {
   .top2Staff .jasmine .PLtext {
-    padding: 0 0 0 15px;
-    width: calc(80% - 20px);
-  }
-  .top2Staff .jasmine .PLtext h1 {
-    font-size: 2rem;
-  }
-  .top2Staff .jasmine .PLtext h1 span {
-    font-size: 1.6rem;
+    padding: 20px 0 0 0;
+    width: 90%;
+    margin: 0 5%;
   }
 }
 .top2Staff .jasmine p {
@@ -623,17 +647,17 @@ h3 {
 @media (max-width: 1000px) {
   .top2Staff .corey {
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
   }
 }
 .top2Staff .corey .imgContainer2 {
   height: 200px;
   width: 200px;
   border-radius: 100px;
-}
-@media (max-width: 1000px) {
-  .top2Staff .corey .imgContainer2 {
-    margin-left: 20px;
-  }
 }
 .top2Staff .corey .imgContainer2 img {
   max-width: 100%;
@@ -646,8 +670,9 @@ h3 {
 }
 @media (max-width: 1000px) {
   .top2Staff .corey .BEtext {
-    padding: 0 0 0 30px;
-    width: calc(100% - 220px);
+    padding: 20px 0 0 0;
+    width: 90%;
+    margin: 0 5%;
   }
 }
 .top2Staff .corey p {
@@ -683,9 +708,9 @@ h3 {
     padding-top: 30px;
     border-top: 1px dashed #b79ced;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     flex-wrap: wrap;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: center;
   }
 }
@@ -695,7 +720,9 @@ h3 {
 }
 @media (max-width: 1000px) {
   .frontEndStaff .ashley .FE_text {
-    width: calc(100% - 220px);
+    width: 90%;
+    margin: 0 5%;
+    padding: 0;
   }
 }
 .frontEndStaff .ashley p {
@@ -710,11 +737,6 @@ h3 {
   height: 200px;
   width: 200px;
   border-radius: 100px;
-}
-@media (max-width: 1000px) {
-  .frontEndStaff .ashley .FEimg {
-    margin-left: 20px;
-  }
 }
 .frontEndStaff .ashley .FEimg img {
   max-width: 100%;
@@ -733,12 +755,11 @@ h3 {
 @media (max-width: 1000px) {
   .frontEndStaff .shya {
     width: 100%;
-    margin: 0;
-    padding-top: 30px;
+    margin: 50px 0 0 0;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     flex-wrap: wrap;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: center;
   }
 }
@@ -748,7 +769,9 @@ h3 {
 }
 @media (max-width: 1000px) {
   .frontEndStaff .shya .FE_1_text {
-    width: calc(100% - 220px);
+    width: 90%;
+    margin: 0 5%;
+    padding: 0;
   }
 }
 .frontEndStaff .shya p {
@@ -763,11 +786,6 @@ h3 {
   height: 200px;
   width: 200px;
   border-radius: 100px;
-}
-@media (max-width: 1000px) {
-  .frontEndStaff .shya .FEimg1 {
-    margin-left: 20px;
-  }
 }
 .frontEndStaff .shya .FEimg1 img {
   max-width: 100%;
@@ -794,6 +812,11 @@ h3 {
 }
 @media (max-width: 1000px) {
   .UIStaff .adam {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
     width: 100%;
     margin: 0;
     padding-top: 30px;
@@ -806,7 +829,9 @@ h3 {
 }
 @media (max-width: 1000px) {
   .UIStaff .adam .uiText {
-    width: calc(100% - 220px);
+    width: 90%;
+    padding: 0;
+    margin: 0 5%;
   }
 }
 .UIStaff .adam p {
@@ -821,11 +846,6 @@ h3 {
   height: 200px;
   width: 200px;
   border-radius: 100px;
-}
-@media (max-width: 1000px) {
-  .UIStaff .adam .uiImg {
-    margin-left: 20px;
-  }
 }
 .UIStaff .adam .uiImg img {
   max-width: 100%;
@@ -843,6 +863,11 @@ h3 {
 }
 @media (max-width: 1000px) {
   .UIStaff .jeremy {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
     width: 100%;
     margin: 0;
     padding-top: 30px;
@@ -854,7 +879,9 @@ h3 {
 }
 @media (max-width: 1000px) {
   .UIStaff .jeremy .uiText_1 {
-    width: calc(80% - 20px);
+    width: 90%;
+    margin: 0 5%;
+    padding: 0;
   }
 }
 .UIStaff .jeremy p {
@@ -877,13 +904,6 @@ h3 {
   height: 200px;
   width: 200px;
   border-radius: 100px;
-}
-@media (max-width: 1000px) {
-  .UIStaff .jeremy .uiImg_1 {
-    width: 20%;
-    height: 100%;
-    margin-left: 20px;
-  }
 }
 .UIStaff .jeremy .uiImg_1 img {
   max-width: 100%;
