--- a/less/about-page.less
+++ b/less/about-page.less
@@ -9,37 +9,25 @@
         .displayF(row, wrap, flex-start, center);
         @media @tablet {
             width: 100%;
+            .displayF(column, wrap, space-between, center);
         }
         .imgContainer {
             height: 200px;
             width: 200px;
             border-radius: 100px;
-            @media @tablet {
-                margin-left: 20px;
-                width: 20%;
-                height: 100%;
-            }
             img {
                 max-width: 100%;
                 max-height: 100%;
                 border-radius: 100px;
-                @media @tablet {
-                    border-radius: 50%;
-                }
             }
         }
         .PLtext {
             width: calc(100% - 200px);
             padding: 0 45px;
             @media @tablet {
-                padding: 0 0 0 15px;
-                h1 {
-                    font-size: 2rem;
-                    span{
-                        font-size: 1.6rem;
-                    }
-                }
-                width: calc(80% - 20px);
+                padding: 20px 0 0 0;
+                width: 90%;
+                margin: 0 5%;
             }
         }
         p {
@@ -59,14 +47,12 @@
         .displayF(row, wrap, flex-start, center);
         @media @tablet {
             width: 100%;
+            .displayF(column, wrap, space-between, center);
         }
         .imgContainer2 {
             height: 200px;
             width: 200px;
             border-radius: 100px;
-            @media @tablet {
-                margin-left: 20px;
-            }
             img {
                 max-width: 100%;
                 max-height: 100%;
@@ -77,8 +63,9 @@
             width: calc(100% - 200px);
             padding: 0 45px;
             @media @tablet {
-                padding: 0 0 0 30px;
-                width: calc(100% - 220px);
+                padding: 20px 0 0 0;
+                width: 90%;
+                margin: 0 5%;
             }
         }
         p {
@@ -107,13 +94,15 @@
             margin: 0;
             padding-top: 30px;
             border-top: 1px dashed #b79ced;
-            .displayF(row, wrap, flex-start, center);
+            .displayF(column, wrap, space-between, center);
         }
         .FE_text {
             width: calc(100% - 200px);
             padding-left: 15px;
             @media @tablet {
-                width: calc(100% - 220px);
+                width: 90%;
+                margin: 0 5%;
+                padding: 0;
             }
         }
         p {
@@ -130,9 +119,6 @@
             height: 200px;
             width: 200px;
             border-radius: 100px;
-            @media @tablet {
-                margin-left: 20px;
-            }
             img {
                 max-width: 100%;
                 max-height: 100%;
@@ -147,15 +133,16 @@
         .displayF(row, wrap, flex-start, flex-start);
         @media @tablet {
             width: 100%;
-            margin: 0;
-            padding-top: 30px;
-            .displayF(row, wrap, flex-start, center);
+            margin: 50px 0 0 0;
+            .displayF(column, wrap, space-between, center);
         }
         .FE_1_text {
             width: calc(100% - 200px);
             padding-left: 15px;
             @media @tablet {
-                width: calc(100% - 220px);
+                width: 90%;
+                margin: 0 5%;
+                padding: 0;
             }
         }
         p {
@@ -172,9 +159,6 @@
             height: 200px;
             width: 200px;
             border-radius: 100px;
-            @media @tablet {
-                margin-left: 20px;
-            }
             img {
                 max-width: 100%;
                 max-height: 100%;
@@ -193,6 +177,7 @@
         margin-left: 5%;
         .displayF(row, wrap, flex-start, center);
         @media @tablet {
+            .displayF(column, wrap, space-between, center);
             width: 100%;
             margin: 0;
             padding-top: 30px;
@@ -202,7 +187,9 @@
             width: calc(100% - 200px);
             padding-left: 15px;
             @media @tablet {
-                width: calc(100% - 220px);                
+                width: 90%;
+                padding: 0;
+                margin: 0 5%;                
             }
         }
         p {
@@ -219,9 +206,6 @@
             height: 200px;
             width: 200px;
             border-radius: 100px;
-            @media @tablet {
-                margin-left: 20px;
-            }
             img {
                 max-width: 100%;
                 max-height: 100%;
@@ -235,6 +219,7 @@
         margin-right: 5%;
         .displayF(row, wrap, flex-start, center);
         @media @tablet {
+            .displayF(column, wrap, space-between, center);
             width: 100%;
             margin: 0;
             padding-top: 30px;
@@ -243,7 +228,9 @@
             width: calc(100% - 200px);
             padding-left: 15px;
             @media @tablet {
-                width: calc(80% - 20px);
+                width: 90%;
+                margin: 0 5%;
+                padding: 0;
             }
         }
         p {
@@ -268,11 +255,6 @@
             height: 200px;
             width: 200px;
             border-radius: 100px;
-            @media @tablet {
-                width: 20%;
-                height: 100%;
-                margin-left: 20px;
-            }
             img {
                 max-width: 100%;
                 max-height: 100%;
