--- a/less/home-page.less
+++ b/less/home-page.less
@@ -8,7 +8,7 @@
     @media @tablet {
         // position: absolute;
         .gridStart(repeat(6, 150px) 20px 300px 75px, repeat(5, 1fr));
-        width: 100vw;
+        width: 100%;
         margin: 0;
         border: none;
     }
@@ -25,6 +25,7 @@
             width: 100%;
             height: 100%;          
             .displayF(column, wrap, space-between, center);
+            text-align: center;
         }
         // .introTextContainer {
         //     width: 100%;
@@ -52,7 +53,7 @@
             max-height: 100%;
             opacity: .4;
             @media @tablet {
-                padding-top: 100px;
+                padding-top: 150px;
                 min-height: 100%;
                 width: 100%;
                 opacity: .2;
@@ -119,7 +120,7 @@
     .centerImg {
         .gridAlign(5, 7, 1, 4);
         @media @tablet {
-            .gridAlign(5, 8, 1, 6);          
+            .gridAlign(5, 7, 1, 6);          
         }
         img {
             padding: 20px 20px 0 15%;
@@ -129,6 +130,7 @@
             @media @tablet{
                 padding: 0 5%;
                 min-width: 100%;
+                opacity: .2;
             }
         }
     }
@@ -177,10 +179,14 @@
     .phoneImg {
         .gridAlign(7, 8, 1, 3);
         @media @tablet {
-            .gridAlign(8, 9, 1, 3)
+            .gridAlign(7, 9, 1, 3)
         }
         img {            
             opacity: .2;
             width: 70%;
+            @media @tablet{
+                width: 100%;
+                max-height: 100%;
+            }
         }
     }
