--- a/less/navigation.less
+++ b/less/navigation.less
@@ -10,6 +10,9 @@
         margin: 0;
         height: 65px;
     }
+    @media @mobile {
+        height: 100px;
+    }
     
     nav {
         .displayF(column, wrap, space-around, center);
@@ -67,6 +70,9 @@
     height: 60px;
     background: #7161ef;
     .displayF(row, wrap, space-evenly, flex-end);
+    @media @mobile {
+        height: 100px;
+    }
     .sideNav {
         color: #efd9ce;
         font-family: 'Montserrat';
