--- a/less/about-page.less
+++ b/less/about-page.less
@@ -88,6 +88,7 @@
     .ashley {
         width: 45%;
         margin-left: 5%;
+        padding-right: 30px;
         .displayF(row, wrap, flex-start, flex-start);
         @media @tablet {
             width: 100%;
