--- a/css/index.css
+++ b/css/index.css
@@ -363,7 +363,6 @@ h3 {
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
-  text-align: center;
 }
 .mainContent .intro {
   font-family: 'Montserrat';
@@ -577,7 +576,7 @@ h3 {
 @media (max-width: 1000px) {
   .phoneImg img {
     width: 100%;
-    max-height: 100%;
+    height: 100%;
   }
 }
 .top2Staff {
