--- a/less/home-page.less
+++ b/less/home-page.less
@@ -25,7 +25,6 @@
             width: 100%;
             height: 100%;          
             .displayF(column, wrap, space-between, center);
-            text-align: center;
         }
         // .introTextContainer {
         //     width: 100%;
@@ -186,7 +185,7 @@
             width: 70%;
             @media @tablet{
                 width: 100%;
-                max-height: 100%;
+                height: 100%;
             }
         }
     }
