--- a/less/home-page.less
+++ b/less/home-page.less
@@ -23,8 +23,10 @@
         }
         .textContain {  
             width: 100%;
-            height: 100%;          
+            height: 100%; 
+            padding-top: 30px;       
             .displayF(column, wrap, space-between, center);
+            text-align: center;
         }
         // .introTextContainer {
         //     width: 100%;
@@ -185,7 +187,7 @@
             width: 70%;
             @media @tablet{
                 width: 100%;
-                height: 100%;
+                max-height: 100%;
             }
         }
     }
